tests/integration/snapshots/integration__conformance__n_object_repeated_null_null.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
{null:null,null:null}
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `}`, found `null`
 --> stdin:1:2
  |
1 | {null:null,null:null}
  | -^^^^
  | |
  | expected due to `{`
